[workspace]
resolver = "2"
members = [
  "server",
  "client",
  "shared"
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
# async runtime
tokio = { version = "1", features = ["full"] }
# TUI
ratatui = "0.26"
crossterm = "0.27"
# time / utilities
rand = "0.8"
